# vecmath

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/linalg/: mat.hpp  mat3.hpp  mat4.hpp  quaternion.hpp  transform.hpp  vec.hpp  vec3.hpp
src/: main.cpp  mat3.cpp  mat4.cpp  quaternion.cpp  transform.cpp  vec3.cpp
tests/: CMakeLists.txt  test_mat3.cpp  test_mat4.cpp  test_mat_template.cpp  test_quaternion.cpp  test_transform.cpp  test_vec3.cpp  test_vec_template.cpp
